[package]
name = "vaz256"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Pure Rust implementation of Verified Abbreviated Zeta 256 bits (VAZ256) - a digital signature scheme for post-quantum computing-resistant signatures combining Dilithium5 and SHAKE256 for key compressions"
readme = "README.md"
authors = ["Fran Luis Vazquez Alonso <cybervazquez@protonmail.com>"]
homepage = "https://github.com/cybervazquez/vaz256"
repository = "https://github.com/cybervazquez/vaz256"
keywords = ["cryptography", "quantum", "dilithium", "signatures", "security"]
categories = ["cryptography"]

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5"
pqcrypto-dilithium = "0.5"
falcon-rust = "0.1.2"

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "vaz256_benchmarks"
harness = false

